     factors faster.

  o  FR #4867 is now implemented. `DT[, as.factor('x'), with=FALSE]` where `x` is a column in `DT`, is now 
     equivalent to `DT[, "x", with=FALSE]` instead of ending up with an error. Thanks to tresbot for reporting 
	 on SO: http://stackoverflow.com/questions/18525976/converting-multiple-data-table-columns-to-factors-in-r

BUG FIXES

  o  If fread returns a data error (such as unbalanced quotes on a particular line) it now
     closes the file first rather than holding a lock open, a Windows only problem.
     Thanks to nigmastar for reporting and Carl Witthoft for the hint. Tests added.
       http://stackoverflow.com/questions/18597123/fread-data-table-locks-files
       
  o  DT[0,col:=value] is now a helpful error rather than crash, #2754. Thanks to Ricardo Saporta
     for reporting. DT[NA,col:=value]'s error message has also been improved. Tests added.
     
  o  Assigning to the same column twice in the same query is now an error rather than a crash in
     some circumstances; e.g., DT[,c("B","B"):=NULL] (delete by reference the same column twice).
     Thanks to Ricardo (#2751) and matt_k (#2791) for reporting. Tests added.
       http://stackoverflow.com/questions/16638484/remove-multiple-columns-from-data-table
	 
  o  setkey and by= now distinguish numeric NaN, NA, Inf and -Inf correctly (#4684, #4815 and #4883).
     Thanks to Martin Liberts for reporting. Tests added.
     
  o  A test of rbindlist on data.frame input has been added, #4648. Thanks to Minkoo Seo.
  
  o  Crash and/or incorrect aggregate results with negative indexing in 'i' is fixed, with a warning 
     when the abs(negative index) > nrow(DT), #2697. Thanks to Eduard Antonyan (eddi) for reporting. 
	 Tests added. http://stackoverflow.com/questions/16046696/data-table-bug-causing-a-segfault-in-r
  
  o  head() and tail() handle negative 'n' values correctly now, #2375. Thanks to Garrett